Add annotations to get_proclist* to make Python bindings work.

https://bugzilla.gnome.org/show_bug.cgi?id=734170